# syspection

./: Cargo.toml  README.md
.vim/: coc-settings.json
syspection/: Cargo.toml
syspection-common/: Cargo.toml
syspection-common/src/: lib.rs
syspection-ebpf/: Cargo.toml  rust-toolchain.toml
syspection-ebpf/src/: main.rs
syspection/src/: helpers.rs  main.rs  model.rs
xtask/src/: build_ebpf.rs  run.rs
