[package]
name = "syspection"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
syspection-common = { path = "../syspection-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "full"] }
clap = "4.3.8"
serde = { version = "1.0.164", features = ["serde_derive"] }

[[bin]]
name = "syspection"
path = "src/main.rs"
